// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders snapshot 1`] = `
<div
  className="container"
>
  <h1
    className="headline-primary"
  >
    My Hacker Stories with 
    0
     comments.
  </h1>
  <form
    className="search-form"
    onSubmit={[Function]}
  >
    <label
      className="label"
      htmlFor="search"
    >
      <strong>
        Search:
      </strong>
    </label>
     
    <input
      className="input"
      id="search"
      onChange={[Function]}
      type="text"
      value="ReasonML"
    />
    <button
      className="button button_large"
      disabled={false}
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Item renders snapshot 1`] = `
<div
  className="item"
>
  <span
    style={
      Object {
        "width": "40%",
      }
    }
  >
    <a
      href="https://reactjs.org/"
    >
      React
    </a>
     
  </span>
  <span
    style={
      Object {
        "width": "30%",
      }
    }
  >
    Jordan Walke
  </span>
   
  <span
    style={
      Object {
        "width": "10%",
      }
    }
  >
    3
  </span>
   
  <span
    style={
      Object {
        "width": "10%",
      }
    }
  >
    4
  </span>
   
  <span
    style={
      Object {
        "width": "10%",
      }
    }
  >
    <button
      className="button button_small"
      onClick={[Function]}
      type="button"
    >
      <svg
        height="18px"
        width="18px"
      >
        check.svg
      </svg>
    </button>
  </span>
</div>
`;

exports[`List renders snapshot 1`] = `
Array [
  <div
    className="item"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href="https://reactjs.org/"
      >
        React
      </a>
       
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      Jordan Walke
    </span>
     
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      3
    </span>
     
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      4
    </span>
     
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button button_small"
        onClick={[Function]}
        type="button"
      >
        <svg
          height="18px"
          width="18px"
        >
          check.svg
        </svg>
      </button>
    </span>
  </div>,
  <div
    className="item"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href="https://redux.js.org/"
      >
        Redux
      </a>
       
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      Dan Abramov, Andrew Clark
    </span>
     
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
     
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      5
    </span>
     
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button button_small"
        onClick={[Function]}
        type="button"
      >
        <svg
          height="18px"
          width="18px"
        >
          check.svg
        </svg>
      </button>
    </span>
  </div>,
]
`;

exports[`SearchForm renders snapshot 1`] = `
<form
  className="search-form"
  onSubmit={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {},
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <label
    className="label"
    htmlFor="search"
  >
    <strong>
      Search:
    </strong>
  </label>
   
  <input
    className="input"
    id="search"
    onChange={
      [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "target": "Redux",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    type="text"
    value="React"
  />
  <button
    className="button button_large"
    disabled={false}
    type="submit"
  >
    Submit
  </button>
</form>
`;
